# cadcore

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/cadcore/: Cargo.toml  README.md
crates/cadcore-geom/: Cargo.toml  README.md
crates/cadcore-geom/src/: curves.rs  lib.rs  surfaces.rs
crates/cadcore-math/: Cargo.toml  README.md
crates/cadcore-math/src/: frame.rs  interval.rs  lib.rs  mat3.rs  point3.rs  transform.rs  unitvec.rs  vec3.rs
crates/cadcore-ops/: Cargo.toml  README.md
crates/cadcore-ops/src/: boolean.rs  lib.rs  sweep.rs
crates/cadcore-step/: Cargo.toml  README.md
crates/cadcore-step/src/: entities.rs  lib.rs  writer.rs
crates/cadcore-step/tests/: union_watertight.rs
crates/cadcore-topo/: Cargo.toml  README.md
crates/cadcore-topo/src/: brep.rs  entities.rs  ids.rs  lib.rs
crates/cadcore/examples/: scaffold_rod.rs
crates/cadcore/src/: lib.rs
