[workspace]
resolver = "2"
members  = [
    "crates/cadcore-math",
    "crates/cadcore-geom",
    "crates/cadcore-topo",
    "crates/cadcore-ops",
    "crates/cadcore-step",
    "crates/cadcore",
]

[workspace.package]
version      = "0.1.17"
edition      = "2021"
authors      = ["Dmytro Yatskovskyi <dmytroyatskovskiy@gmail.com>"]
repository   = "https://github.com/YATSKOVSKYI/cadcore"
homepage     = "https://github.com/YATSKOVSKYI/cadcore"
license      = "PolyForm-Noncommercial-1.0.0"
rust-version = "1.78"

# ── Shared profile tweaks ─────────────────────────────────────────────────────

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
