[package]
name             = "cadcore-ops"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
license.workspace    = true
rust-version.workspace = true
readme       = "README.md"
description  = "Geometric operations for the cadcore CAD kernel - O(N) filament sweep, analytic B-Rep construction without Boolean ops"
keywords     = ["cad", "brep", "sweep", "geometry", "3d"]
categories   = ["science"]

[dependencies]
cadcore-math = { path = "../cadcore-math", version = "0.1" }
cadcore-geom = { path = "../cadcore-geom", version = "0.1" }
cadcore-topo = { path = "../cadcore-topo", version = "0.1" }
